# mynotif-backend

./: .env.example  requirements.txt  setup.cfg
src/helpers/: model_utils.py
src/main/: settings.py  urls.py
src/nurse/: serializers.py  urls.py  views.py
src/nurse/tests/: test_views.py
src/payment/: admin.py  constants.py  models.py  serializers.py  stripe_event_handlers.py  urls.py  views.py  webhooks.py
src/payment/migrations/: 0001_initial.py
src/tests/helpers/: test_get_object_or_400.py
src/tests/payment/: test_models.py  test_stripe_webhook.py  test_views.py
